<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="8dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_edit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="24dp"
        android:hint="@string/record"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darker_gray"
            tools:text="34:43" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="24dp"
        android:hint="@string/date"
        app:layout_constraintTop_toBottomOf="@+id/text_edit_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/darker_gray"
            tools:text="12/11/2025" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/input_save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_date_layout" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/clear_record"
        app:layout_constraintTop_toBottomOf="@+id/input_save_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>